K8s/08-network-policy/allow-ingress-to-app-prod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-my-java-app
  namespace: prod
  labels:
    app: my-java-app
spec:
  podSelector:
    matchLabels:
      app: my-java-app
  policyTypes:
    - Ingress
  ingress:
    # Allow from same namespace
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 8080
